# crypto-tds-calculator

./: Dockerfile  README.md  docker-compose.yml  env_sample  requirements.txt  setup.cfg  start.sh  stop.sh  upgrade.sh
src/tds/calculator/: main.py
src/tds/calculator/common/: application.py  configuration.py  logger.py  utils.py
src/tds/calculator/common/datastore/: composites.py  datastore.py  models.py
src/tds/calculator/controllers/: tds.py
src/tds/calculator/custom_router/: ExceptionHandlerLoggingRoute.py
src/tds/calculator/models/: .tds.py.swp  amount.py  binocs_model.py  tds.py  trade.py  user.py
src/tds/calculator/services/: .tds_service.py.swp  tds_service.py
