[metadata]
name = binocs_tds-calculator 
version = 1.0.0
author = Pankaj Garg
author_email = pankaj@binocs.co
description = 'TDS Calculator'
long_description = 'TDS Calculator for India'
long_description_content_type = text/markdown
url = https://github.com/Binocs-co/tds-calculator
project_urls =
    Bug Tracker = https://github.com/Binocs-co/tds-calculator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    fastapi==0.75.2
    python-dotenv==0.20.0
    uvicorn==0.17.6

[options.packages.find]
where = src
